<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settingsFragment"
        android:title="Settings" />

    <item android:title="@string/theme">
        <menu>
            <item
                android:id="@+id/language"
                app:actionLayout="@layout/language_switch_layout"
                android:title="@string/language" />
            <item
                android:id="@+id/themeMode"
                android:title="@string/dark_mode"
                app:actionLayout="@layout/theme_switch_layout" />
        </menu>
    </item>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/share"
                android:title="@string/share" />
            <item
                android:id="@+id/rateUs"
                android:title="@string/rate_us" />
        </menu>
    </item>
</menu>