<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".presentation.screen.payment.BottomSheetCardFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCardNumber"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/fill_in_card_number_eng" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCardExpireDate"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/fill_in_card_expire_date_eng" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCCV"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/fill_in_ccv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/save_info_eng"
            android:textAllCaps="false" />

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>
