<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.screen.address.AddressFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBackArrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_back_arrow"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_information"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_address_default"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/rvAllAddresses"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:id="@+id/showMap"
        android:layout_gravity="center_horizontal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_address"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAllCaps="false"
            android:layout_marginTop="15dp"
            android:id="@+id/addNewAddress"
            android:layout_gravity="center_horizontal"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:text="@string/save_changes"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAllCaps="false"
        android:id="@+id/SaveChanges"
        android:layout_gravity="center_horizontal"/>


</androidx.appcompat.widget.LinearLayoutCompat>